--- a/bases/flux-app-v2/customer/kustomization.yaml
+++ b/bases/flux-app-v2/customer/kustomization.yaml
@@ -4,9 +4,9 @@ helmCharts:
   - name: flux-app
     includeCRDs: false
     namespace: flux-system
-    repo: https://giantswarm.github.io/giantswarm-catalog/
+    repo: https://giantswarm.github.io/giantswarm-test-catalog/
     releaseName: customer-flux
-    version: v1.0.0
+    version: v1.2.0-cda724be92bb952e4777aa5074ea8edcfdfeeb39
     valuesInline:
       images:
         registry: gsoci.azurecr.io
