--- a/bases/provider/capz/flux-v2/kustomization.yaml
+++ b/bases/provider/capz/flux-v2/kustomization.yaml
@@ -29,3 +29,4 @@ resources:
   - ../../../flux-app-v2/giantswarm
   - ../../../flux-giantswarm-resources
   - configmap-provider-data.yaml
+  - policy-exception.yaml
