--- a/extras/flux/patch-remove-psps.yaml
+++ b/extras/flux/patch-remove-psps.yaml
@@ -2,19 +2,19 @@ $patch: delete
 apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
 metadata:
-  labels:
-    giantswarm.io/kustomize-selector: remove-psp
+  name: flux-giantswarm
+  namespace: flux-giantswarm
 ---
 $patch: delete
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  labels:
-    giantswarm.io/kustomize-selector: remove-psp
+  name: flux-giantswarm
+  namespace: flux-giantswarm
 ---
 $patch: delete
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  labels:
-    giantswarm.io/kustomize-selector: remove-psp
+  name: flux-giantswarm
+  namespace: flux-giantswarm
