--- a/extras/flux/patch-remove-psps.yaml
+++ b/extras/flux/patch-remove-psps.yaml
@@ -2,6 +2,8 @@ $patch: delete
 apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
 metadata:
+  name: flux-giantswarm
+  namespace: flux-giantswarm
   labels:
     giantswarm.io/kustomize-selector: remove-psp
 ---
@@ -9,12 +11,12 @@ $patch: delete
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  labels:
-    giantswarm.io/kustomize-selector: remove-psp
+  name: psp-flux-giantswarm
+  namespace: flux-giantswarm
 ---
 $patch: delete
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  labels:
-    giantswarm.io/kustomize-selector: remove-psp
+  name: psp-flux-giantswarm
+  namespace: flux-giantswarm
