--- a/extras/flux/patch-remove-psps.yaml
+++ b/extras/flux/patch-remove-psps.yaml
@@ -4,8 +4,6 @@ kind: PodSecurityPolicy
 metadata:
   name: flux-giantswarm
   namespace: flux-giantswarm
-  labels:
-    giantswarm.io/kustomize-selector: remove-psp
 ---
 $patch: delete
 apiVersion: rbac.authorization.k8s.io/v1
@@ -20,3 +18,24 @@ kind: ClusterRole
 metadata:
   name: psp-flux-giantswarm
   namespace: flux-giantswarm
+---
+$patch: delete
+apiVersion: policy/v1beta1
+kind: PodSecurityPolicy
+metadata:
+  name: customer-flux
+  namespace: flux-system
+---
+$patch: delete
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: psp-customer-flux
+  namespace: flux-system
+---
+$patch: delete
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: psp-customer-flux
+  namespace: flux-system
