--- a/extras/flux/patch-remove-psp.yaml
+++ b/extras/flux/patch-remove-psp.yaml
@@ -2,40 +2,12 @@ $patch: delete
 apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
 metadata:
-  name: flux-giantswarm
-  namespace: flux-giantswarm
----
-$patch: delete
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
-metadata:
-  name: psp-flux-giantswarm
-  namespace: flux-giantswarm
----
-$patch: delete
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
-metadata:
-  name: psp-flux-giantswarm
+  name: flux-app-pvc-psp-giantswarm
   namespace: flux-giantswarm
 ---
 $patch: delete
 apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
 metadata:
-  name: customer-flux
-  namespace: flux-system
----
-$patch: delete
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
-metadata:
-  name: psp-customer-flux
-  namespace: flux-system
----
-$patch: delete
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
-metadata:
-  name: psp-customer-flux
+  name: flux-app-pvc-psp
   namespace: flux-system
