--- a/bases/flux-app-v2/giantswarm/kustomization.yaml
+++ b/bases/flux-app-v2/giantswarm/kustomization.yaml
@@ -6,11 +6,13 @@ helmCharts:
     namespace: flux-giantswarm
     repo: https://giantswarm.github.io/giantswarm-test-catalog/
     releaseName: flux-giantswarm
-    version: 1.2.0-b006d7dc82fcc069a8f9c7cdb25646243f5d005d
+    version: 1.2.0-9b2cb842d5f9ceeb64d955b1b0faee0e441aa7c7
     valuesInline:
       images:
         registry: gsoci.azurecr.io
       cilium:
+        enforce: true
+      policyException:
         enforce: true
       clusterRoles:
         install: false
