--- a/bases/flux-giantswarm-resources/resource-kustomizations.yaml
+++ b/bases/flux-giantswarm-resources/resource-kustomizations.yaml
@@ -2,6 +2,27 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
+  name: customer-flux-provider
+  namespace: flux-giantswarm
+spec:
+  interval: 1h
+  # DO NOT use slashes in the comment to indicate the path, just "->".
+  path: "bases/flux-app-v2/customer"
+  # Think about changing prune settings twice. Or three times. In fact, don't
+  # change it at all. You are risking deleting customer Workload Clusters and
+  # more.
+  prune: false
+  retryInterval: 30s
+  timeout: 15m
+  wait: true
+  sourceRef:
+    kind: GitRepository
+    name: customer-flux-provider
+    namespace: flux-giantswarm
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
   name: crds
   namespace: flux-giantswarm
 spec:
