--- a/extras/flux/patch-source-controller-deployment-socat.yaml
+++ b/extras/flux/patch-source-controller-deployment-socat.yaml
@@ -2,7 +2,7 @@
   path: "/spec/template/spec/containers/-"
   value:
     name: proxy
-    image: gsoci.azurecr.io/alpine/socat:1.7.4.4
+    image: alpine/socat:1.7.4.4
     securityContext:
       allowPrivilegeEscalation: false
       readOnlyRootFilesystem: true
