--- a/bases/flux-app-v2/giantswarm/kustomization.yaml
+++ b/bases/flux-app-v2/giantswarm/kustomization.yaml
@@ -24,23 +24,25 @@ helmCharts:
       verticalPodAutoscaler:
         enabled: true
         force: true
-images:
-  - name: giantswarm/fluxcd-helm-controller
-    newName: gsoci.azurecr.io/giantswarm/fluxcd-helm-controller
-  - name: giantswarm/fluxcd-image-automation-controller
-    newName: gsoci.azurecr.io/giantswarm/fluxcd-image-automation-controller
-  - name: giantswarm/fluxcd-image-reflector-controller
-    newName: gsoci.azurecr.io/giantswarm/fluxcd-image-reflector-controller
-  - name: giantswarm/fluxcd-notification-controller
-    newName: gsoci.azurecr.io/giantswarm/fluxcd-notification-controller
-  - name: giantswarm/fluxcd-source-controller
-    newName: gsoci.azurecr.io/giantswarm/fluxcd-source-controller
-  - name: giantswarm/fluxcd-kustomize-controller
-    newName: gsoci.azurecr.io/giantswarm/kustomize-controller
-  - name: giantswarm/k8s-jwt-to-vault-token
-    newName: gsoci.azurecr.io/giantswarm/k8s-jwt-to-vault-token
-  - name: giantswarm/docker-kubectl
-    newName: gsoci.azurecr.io/giantswarm/docker-kubectl
+#images:
+#  - name: giantswarm/fluxcd-helm-controller
+#    newName: gsoci.azurecr.io/giantswarm/fluxcd-helm-controller
+#  - name: giantswarm/fluxcd-image-automation-controller
+#    newName: gsoci.azurecr.io/giantswarm/fluxcd-image-automation-controller
+#  - name: giantswarm/fluxcd-image-reflector-controller
+#    newName: gsoci.azurecr.io/giantswarm/fluxcd-image-reflector-controller
+#  - name: giantswarm/fluxcd-notification-controller
+#    newName: gsoci.azurecr.io/giantswarm/fluxcd-notification-controller
+#  - name: giantswarm/fluxcd-source-controller
+#    newName: gsoci.azurecr.io/giantswarm/fluxcd-source-controller
+#  - name: giantswarm/fluxcd-kustomize-controller
+#    newName: gsoci.azurecr.io/giantswarm/kustomize-controller
+#  - name: giantswarm/kustomize-controller
+#    newName: gsoci.azurecr.io/giantswarm/kustomize-controller
+#  - name: giantswarm/k8s-jwt-to-vault-token
+#    newName: gsoci.azurecr.io/giantswarm/k8s-jwt-to-vault-token
+#  - name: giantswarm/docker-kubectl
+#    newName: gsoci.azurecr.io/giantswarm/docker-kubectl
 patches:
 - target:
     kind: ClusterRole
