--- a/bases/crds/vintage/aws/v5.2.0/kustomization.yaml
+++ b/bases/crds/vintage/aws/v5.2.0/kustomization.yaml
@@ -1,4 +1,5 @@
 resources:
+  - ../../common
   - https://raw.githubusercontent.com/giantswarm/apiextensions/v5.2.0/helm/crds-aws/templates/core.giantswarm.io_awsclusterconfigs.yaml
   - https://raw.githubusercontent.com/giantswarm/apiextensions/v5.2.0/helm/crds-aws/templates/infrastructure.giantswarm.io_awsclusters.yaml
   - https://raw.githubusercontent.com/giantswarm/apiextensions/v5.2.0/helm/crds-aws/templates/infrastructure.giantswarm.io_awscontrolplanes.yaml
