--- a/extras/flux/patch-remove-psp.yaml
+++ b/extras/flux/patch-remove-psp.yaml
@@ -5,9 +5,9 @@ metadata:
   name: flux-app-pvc-psp-giantswarm
   namespace: flux-giantswarm
 ---
-$patch: delete
-apiVersion: policy/v1beta1
-kind: PodSecurityPolicy
-metadata:
-  name: flux-app-pvc-psp
-  namespace: flux-system
+#$patch: delete
+#apiVersion: policy/v1beta1
+#kind: PodSecurityPolicy
+#metadata:
+#  name: flux-app-pvc-psp
+#  namespace: flux-system
