--- a/extras/flux/patch-remove-psp.yaml
+++ b/extras/flux/patch-remove-psp.yaml
@@ -5,9 +5,17 @@ metadata:
   name: flux-app-pvc-psp-giantswarm
   namespace: flux-giantswarm
 ---
-#$patch: delete
-#apiVersion: policy/v1beta1
-#kind: PodSecurityPolicy
-#metadata:
-#  name: flux-app-pvc-psp
-#  namespace: flux-system
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: customer-flux-provider
+  namespace: flux-giantswarm
+spec:
+  patches:
+    - patch: |-
+        $patch: delete
+        apiVersion: policy/v1beta1
+        kind: PodSecurityPolicy
+        metadata:
+          name: flux-app-pvc-psp
+          namespace: flux-system
