--- a/extras/zot/values.yaml
+++ b/extras/zot/values.yaml
@@ -38,7 +38,17 @@ configFiles:
         "http":
         {
             "address": "0.0.0.0",
-            "port": "5000"
+            "port": "5000",
+            "accessControl":
+            {
+                "repositories":
+                {
+                    "**":
+                    {
+                          "anonymousPolicy": []
+                    }
+                }
+            }
         },
         "log":
         {
