--- a/extras/zot/kustomization.yaml
+++ b/extras/zot/kustomization.yaml
@@ -1,5 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: flux-giantswarm
 generatorOptions:
   disableNameSuffixHash: true
 
@@ -20,6 +21,5 @@ resources:
 
 configMapGenerator:
 - name: zot-config
-  namespace: zot
   files:
   - ./values.yaml
