--- a/extras/flux/patch-remove-psp.yaml
+++ b/extras/flux/patch-remove-psp.yaml
@@ -5,6 +5,7 @@ metadata:
   name: flux-app-pvc-psp-giantswarm
   namespace: flux-giantswarm
 ---
+$patch: merge
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
