Disable resource hungry zot extensions
Issue: https://github.com/giantswarm/giantswarm/issues/30596
Issue: https://github.com/giantswarm/roadmap/issues/3069

--- a/extras/zot/values.yaml
+++ b/extras/zot/values.yaml
@@ -95,14 +95,8 @@ configFiles:
               }
             ]
           },
-          "scrub": {
-            "enable": true
-          },
           "search": {
-            "enable": true,
-            "cve": {
-                "updateInterval": "2h"
-            }
+            "enable": false
           },
           "metrics": {
             "enable": true,
