Add cm postbuild for flux extras
This uses a postbuild substitution to replace the value iof a cm exists

--- a/extras/crossplane/helmrelease-crossplane.yaml
+++ b/extras/crossplane/helmrelease-crossplane.yaml
@@ -27,3 +27,6 @@ spec:
   values:
     metrics:
       enabled: true
+    global:
+      podSecurityStandards:
+        enforced: ${pssEnforced:=true}
