--- a/bases/flux-giantswarm-resources/resource-kustomizations.yaml
+++ b/bases/flux-giantswarm-resources/resource-kustomizations.yaml
@@ -56,6 +56,11 @@ spec:
     kind: GitRepository
     name: management-clusters-fleet
     namespace: flux-giantswarm
+  postBuild:
+    substituteFrom:
+    - kind: ConfigMap
+      name: flux-extras-pssenforced
+      optional: true
   timeout: 3m
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
